Improve older content

--- a/src/content/blog/cast-2014.md
+++ b/src/content/blog/cast-2014.md
@@ -1,20 +1,34 @@
 ---
-title: "CAST 2014"
-description: "Exciting news about being selected to present at CAST 2014, the annual Conference for the Association of Software Testing in New York City..."
+title: "Selected for CAST 2014: First Conference Presentation"
+description: "From first-day challenge to conference acceptance - getting selected to present at CAST 2014 in New York City and preparing for my first professional conference talk."
 publishDate: 2014-02-25
 author: "Jonathan Clarkin"
+keywords: "CAST conference, software testing, conference presentation, Association for Software Testing, professional development"
 ---
 
-On my first day in my new job, my boss threw out a challenge to me: submit a proposal to CAST for a conference talk I could give. The submission due date was is 42 hours…
+Day one at my new job came with an unexpected challenge: "Submit a proposal to CAST for a conference talk. You have 42 hours."
 
-CAST is the annual Conference for the Association of Software Testing. It does not align with my typical impression of conferences: payed for by industry corporations, presenters with hidden agendas to line their pockets, and a general feeling of a shark-tank with chum. Instead, to me it sounds more like a University type of conference: sessions meant for discussion and growth for both the attendees and the presenter, and not linked directly to profits.
+CAST - the Conference for the Association of Software Testing - immediately struck me as different from typical industry conferences. No corporate sponsors pushing products, no hidden sales agendas, no shark-tank atmosphere. Instead, it felt more like an academic conference: sessions designed for genuine discussion and mutual learning between attendees and presenters.
 
-So, back to my challenge. I succeeded at selecting a topic of interest to me and outlining enough information that I believe I could grow it into a 40 minute presentation. I wrote up a proposal and emailed it into the cyber-nether.
+## The 42-Hour Sprint
 
-My letter made it to Bernie Berger & Paul Holland, the co-chairs of the conference. And most surprising to me, I have been selected to present this August in New York City!
+I dove in, selecting a topic that genuinely excited me and outlining enough substance for a 40-minute presentation. After crafting my proposal, I sent it into the digital void, hoping for the best.
 
-It is a big responsibility, and definitely an honour to have been selected. I have a lot of work ahead for creating an engaging and educational presentation that is worthy of the time of my peers.
+The proposal reached Bernie Berger and Paul Holland, the conference co-chairs. Then came the surprise: **I've been selected to present this August in New York City!**
 
-It will a first for me in many regards: trip to NY, attending a conference in my profession, presenting to a crowd outside of my employer, planning and booking travel to the United States of America, preparing myself for my first encounter with the TSA scanners… :)
+## First-Time Everything
 
-Wish me luck ! 
+This represents several firsts for me:
+- First trip to New York
+- First professional conference attendance
+- First presentation to peers outside my employer  
+- First international travel planning to the US
+- First encounter with TSA scanners (the anxiety is real!)
+
+## The Weight of Opportunity
+
+Being selected feels like both an honor and a significant responsibility. I have months ahead to craft an engaging, educational presentation worthy of my peers' time and attention.
+
+The testing community has welcomed me with this opportunity. Now comes the real work: delivering value that justifies their confidence.
+
+Wish me luck! 🗽 
